--- a/index.html
+++ b/index.html
@@ -4,9 +4,72 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>The booleaner</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <!-- Logo -->
+    <header class="container">
+        <img class="logo" src="img/logo.svg">
+    </header>
+    <!-- Parte principale -->
+    <main>
+        <h1>Internet deve essere al servizio del "bene pubblico": il manifesto di Tim Berners-Lee</h1>
+        <div class="credits">Scritto da <span id="author">The Booleaners</span></div>
+        <div id="date">il 10/10/2020</div>
+        <img src="img/tim-1.jpg" id="pics-tim1">
+        <img src="img/tim-2.jpg" id="pics-tim2">
+        <br>
+        <p id="photo-credits">
+            1st Photo: John S. and James L. Knight Foundation, by Scott Henrichsen
+            <br>
+            2nd: Photo: Wikimedia, by Paul Clarke
+        </p>
+        <p id="text">
+            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ut aliquid modi enim dicta tempora magnam cum delectus aliquam voluptas, sit aspernatur accusantium, officiis, ducimus exercitationem eaque libero veniam perspiciatis. Voluptates? Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quasi placeat sapiente officiis sint. Ex, perspiciatis eveniet consequuntur soluta aut iure excepturi, dicta similique iusto commodi eius et corrupti maxime quibusdam!
+        </p>
+        <ul id="list">
+            <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid asperiores officia eaque est dolor quos corrupti numquam cum fugit, assumenda molestiae mollitia quia eum, tempora corporis qui nihil consequatur recusandae!</li>
+            <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque ipsa voluptatibus at quas aut quo placeat iure atque tempore, repellendus dicta adipisci blanditiis velit obcaecati qui voluptates magnam. Mollitia, enim!</li>
+            <li>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Similique, error? Vero nihil voluptatibus at, ab natus tempora assumenda officia hic a eos. Tempora, ratione. Tenetur laborum adipisci quidem omnis veniam.</li>
+        </ul>
+        <table>
+            <thead>
+                <th>Lorem ipsum dolor</th>
+                <th>Lorem ipsum dolor</th>
+                <th>Lorem ipsum dolor</th>
+            </thead>    
+            <tbody id="lb">
+                <td>Lorem ipsum dolor</td>
+                <td>Lorem ipsum dolor</td>
+                <td>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores, suscipit mollitia aperiam necessitatibus nemo odit perspiciatis voluptatum.</td>
+            </tbody>
+            <tbody>
+                <td>Lorem ipsum dolor</td>
+                <td>Lorem ipsum dolor</td>
+                <td>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores, suscipit mollitia aperiam necessitatibus nemo odit perspiciatis voluptatum.</td>
+            </tbody>
+            <tbody id="lb">
+                <td>Lorem ipsum dolor</td>
+                <td>Lorem ipsum dolor</td>
+                <td>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores, suscipit mollitia aperiam necessitatibus nemo odit perspiciatis voluptatum.</td>
+            </tbody>
+        </table>
+        <p id="talk">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus, corporis quia. Necessitatibus beatae aspernatur labore recusandae, ex dolorem officia omnis itaque iusto esse impedit magnam! Nobis, recusandae dolore. Laborum, fugiat! Lorem ipsum, dolor sit amet consectetur adipisicing elit.<span id="ev">Suscipit sed cumque cum, consectetur quos quae odit</span>, eaque itaque qui dolor sint quod beatae, placeat voluptate magnam! Nam voluptate quibusdam corporis!
+        </p>
+   
+    </main>
+
+    <footer>
+        <h3 id="recommended">Potrebbero interessarti</h3>
+        <div id="monitorpic">
+            <h3 id="title">Lorem ipsum dolor</h3>
+        </div>
+        <div id="graphpic">
+            <h3 id="title">Lorem ipsum dolor</h3>
+        </div>
+    </footer>
+
 </body>
 </html>
