--- a/index.html
+++ b/index.html
@@ -26,37 +26,49 @@
             2nd: Photo: Wikimedia, by Paul Clarke
         </p>
         <p id="text">
-            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ut aliquid modi enim dicta tempora magnam cum delectus aliquam voluptas, sit aspernatur accusantium, officiis, ducimus exercitationem eaque libero veniam perspiciatis. Voluptates? Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quasi placeat sapiente officiis sint. Ex, perspiciatis eveniet consequuntur soluta aut iure excepturi, dicta similique iusto commodi eius et corrupti maxime quibusdam!
+            Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim
+            ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nis] ut aliquip ex ea commodo consequat. Duis autem vel eum iriure dolor in hendrerit in
+            vulputate velit esse molestie consequat, <span id="ev">vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto</span> odio dignissim qui blandit praesent luptatum
+            zzril delenit augue duis dolore te feugait nulla facilisi.
         </p>
         <ul id="list">
-            <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid asperiores officia eaque est dolor quos corrupti numquam cum fugit, assumenda molestiae mollitia quia eum, tempora corporis qui nihil consequatur recusandae!</li>
-            <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque ipsa voluptatibus at quas aut quo placeat iure atque tempore, repellendus dicta adipisci blanditiis velit obcaecati qui voluptates magnam. Mollitia, enim!</li>
-            <li>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Similique, error? Vero nihil voluptatibus at, ab natus tempora assumenda officia hic a eos. Tempora, ratione. Tenetur laborum adipisci quidem omnis veniam.</li>
+            <li>Lorem ipsum dolor sit amet, cons ectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.</li>
+            <li>Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ca commodo consequat.</li>
+            <li>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat..</li>
         </ul>
         <table>
             <thead>
-                <th>Lorem ipsum dolor</th>
-                <th>Lorem ipsum dolor</th>
+                <th id="th">Lorem ipsum dolor</th>
+                <th id="th">Lorem ipsum dolor</th>
                 <th>Lorem ipsum dolor</th>
             </thead>    
             <tbody id="lb">
                 <td>Lorem ipsum dolor</td>
                 <td>Lorem ipsum dolor</td>
-                <td>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores, suscipit mollitia aperiam necessitatibus nemo odit perspiciatis voluptatum.</td>
+                <td>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium eos quo,
+                    placeat consectetur ullam fugiat similique perferendis repellendus illo mollitia
+                    eveniet expedita a quia modi. Totam saepe quibusdam natus harum.</td>
             </tbody>
             <tbody>
                 <td>Lorem ipsum dolor</td>
                 <td>Lorem ipsum dolor</td>
-                <td>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores, suscipit mollitia aperiam necessitatibus nemo odit perspiciatis voluptatum.</td>
+                <td>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium eos quo,
+                    placeat consectetur ullam fugiat similique perferendis repellendus illo mollitia
+                    eveniet expedita a quia modi. Totam saepe quibusdam natus harum.</td>
             </tbody>
             <tbody id="lb">
                 <td>Lorem ipsum dolor</td>
                 <td>Lorem ipsum dolor</td>
-                <td>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores, suscipit mollitia aperiam necessitatibus nemo odit perspiciatis voluptatum.</td>
+                <td>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium eos quo,
+                    placeat consectetur ullam fugiat similique perferendis repellendus illo mollitia
+                    eveniet expedita a quia modi. Totam saepe quibusdam natus harum.</td>
             </tbody>
         </table>
         <p id="talk">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus, corporis quia. Necessitatibus beatae aspernatur labore recusandae, ex dolorem officia omnis itaque iusto esse impedit magnam! Nobis, recusandae dolore. Laborum, fugiat! Lorem ipsum, dolor sit amet consectetur adipisicing elit.<span id="ev">Suscipit sed cumque cum, consectetur quos quae odit</span>, eaque itaque qui dolor sint quod beatae, placeat voluptate magnam! Nam voluptate quibusdam corporis!
+            Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim
+            ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nis] ut aliquip ex ea commodo consequat. Duis autem vel eum iriure dolor in hendrerit in
+            vulputäte velit esse molestie consequat, <span id="ev">vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et justo</span> odio dignissim qui blandit praesent luptatum
+            zzril delenit augue duis dolore te feugait nulla facilisi.
         </p>
    
     </main>
